--- a/superego/assets/styles/scss/04_layout/_header.scss
+++ b/superego/assets/styles/scss/04_layout/_header.scss
@@ -20,13 +20,13 @@ body header#main-header {
     display: flex;
     align-items: center;
 
-    &:hover {
-      svg {
-        path {
-          fill: var(--wp--preset--color--accent-b);
-        }
-      }
-    }
+    // &:hover {
+    //   svg {
+    //     path {
+    //       fill: var(--wp--preset--color--accent-b);
+    //     }
+    //   }
+    // }
   }
 
   nav#main-navigation {
@@ -53,10 +53,14 @@ body header#main-header {
           align-items: center;
           text-align: center;
           background-color: transparent;
-          color: var(--wp--preset--color--dark-b);
+          color: var(--wp--preset--color--light-b);
           transition: var(--se--transition);
           user-select: none;
           white-space: nowrap;
+          font-family: var(--wp--preset--font-family--heading-font);
+          text-transform: uppercase;
+          font-size: 30px;
+          line-height: 36px;
 
           &:hover {
             //background-color: var(--wp--preset--color--light-1);
@@ -66,7 +70,7 @@ body header#main-header {
         &.current-menu-item,
         &.current-menu-ancestor {
           > a {
-            color: var(--wp--preset--color--accent-b);
+            color: var(--wp--preset--color--secondary-b);
           }
         }
 
