--- a/superego/assets/styles/scss/03_base/_base.scss
+++ b/superego/assets/styles/scss/03_base/_base.scss
@@ -18,7 +18,7 @@ html {
   font-size: 16px;
   height: 100%;
   width: 100%;
-  scroll-behavior: smooth;
+  //scroll-behavior: smooth;
 }
 
 // Basic body styling (Not backend)
@@ -150,7 +150,7 @@ body {
   // Layout
   --se--content-width: 100%;
   --se--full-width: 1600px;
-  --se--header-height: 5rem;
+  --se--header-height: 6rem;
   --se--section-padding: 3rem;
 
   // Transitions
