--- a/superego/style.css
+++ b/superego/style.css
@@ -668,13 +668,21 @@ video {
   z-index: 10 !important;
 }
 
+.col-span-10 {
+  grid-column: span 10 / span 10 !important;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2 !important;
+}
+
 .m-0 {
   margin: 0px !important;
 }
 
-.mx-auto {
-  margin-left: auto !important;
-  margin-right: auto !important;
+.mx-0 {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
 }
 
 .mt-24 {
@@ -733,6 +741,26 @@ video {
   height: fit-content !important;
 }
 
+.h-screen {
+  height: 100vh !important;
+}
+
+.h-fit {
+  height: -webkit-fit-content !important;
+  height: -moz-fit-content !important;
+  height: fit-content !important;
+}
+
+.h-screen {
+  height: 100vh !important;
+}
+
+.h-fit {
+  height: -webkit-fit-content !important;
+  height: -moz-fit-content !important;
+  height: fit-content !important;
+}
+
 .max-h-\[300px\] {
   max-height: 300px !important;
 }
@@ -743,10 +771,6 @@ video {
 
 .max-h-\[300px\] {
   max-height: 300px !important;
-}
-
-.w-screen {
-  width: 100vw !important;
 }
 
 .w-fit {
@@ -772,6 +796,74 @@ video {
      -moz-user-select: none !important;
       -ms-user-select: none !important;
           user-select: none !important;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
 }
 
 .grid-cols-1 {
@@ -814,6 +906,10 @@ video {
   gap: 0.5rem !important;
 }
 
+.gap-8 {
+  gap: 2rem !important;
+}
+
 .overflow-hidden {
   overflow: hidden !important;
 }
@@ -826,6 +922,10 @@ video {
   border-radius: 9999px !important;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem !important;
+}
+
 .border-0 {
   border-width: 0px !important;
 }
@@ -834,14 +934,28 @@ video {
   border-width: 1px !important;
 }
 
+.border-0 {
+  border-width: 0px !important;
+}
+
 .border-secondary-b {
   --tw-border-opacity: 1 !important;
   border-color: rgb(231 175 65 / var(--tw-border-opacity)) !important;
 }
 
+.border-light-b {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity)) !important;
+}
+
 .bg-secondary-d {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(196 149 55 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-primary-b {
@@ -884,6 +998,156 @@ video {
   background-color: rgb(88 88 88 / var(--tw-bg-opacity)) !important;
 }
 
+.bg-black {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-b {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(88 88 88 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-l {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(121 121 121 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-orange-300 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(253 186 116 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-b {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(88 88 88 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-l {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(121 121 121 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-orange-300 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(253 186 116 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-b {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(88 88 88 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-l {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(121 121 121 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-orange-300 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(253 186 116 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-b {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(88 88 88 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-l {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(121 121 121 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-orange-300 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(253 186 116 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-b {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(88 88 88 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-l {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(121 121 121 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-orange-300 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(253 186 116 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-b {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(88 88 88 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-l {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(121 121 121 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-orange-300 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(253 186 116 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-b {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(88 88 88 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-primary-l {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(121 121 121 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-orange-300 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(253 186 116 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-secondary-b {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(231 175 65 / var(--tw-bg-opacity)) !important;
+}
+
 .object-cover {
   -o-object-fit: cover !important;
      object-fit: cover !important;
@@ -898,14 +1162,14 @@ video {
   padding-bottom: 3rem !important;
 }
 
-.px-8 {
-  padding-left: 2rem !important;
-  padding-right: 2rem !important;
-}
-
 .py-6 {
   padding-top: 1.5rem !important;
   padding-bottom: 1.5rem !important;
+}
+
+.px-8 {
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
 }
 
 .py-2 {
@@ -933,6 +1197,15 @@ video {
   padding-bottom: 2rem !important;
 }
 
+.py-12 {
+  padding-top: 3rem !important;
+  padding-bottom: 3rem !important;
+}
+
+.pb-8 {
+  padding-bottom: 2rem !important;
+}
+
 .text-center {
   text-align: center !important;
 }
@@ -942,14 +1215,67 @@ video {
   line-height: 1.25rem !important;
 }
 
+.text-6xl {
+  font-size: 3.75rem !important;
+  line-height: 1 !important;
+}
+
+.text-h1-mobile {
+  font-size: 60px !important;
+}
+
+.text-h2-mobile {
+  font-size: 50px !important;
+}
+
 .text-3xl {
   font-size: 1.875rem !important;
   line-height: 2.25rem !important;
 }
 
-.text-6xl {
-  font-size: 3.75rem !important;
-  line-height: 1 !important;
+.text-h2-mobile {
+  font-size: 50px !important;
+}
+
+.text-xs {
+  font-size: 0.75rem !important;
+  line-height: 1rem !important;
+}
+
+.text-h2-mobile {
+  font-size: 50px !important;
+}
+
+.text-base {
+  font-size: 1rem !important;
+  line-height: 1.5rem !important;
+}
+
+.text-h2-mobile {
+  font-size: 50px !important;
+}
+
+.text-lg {
+  font-size: 1.125rem !important;
+  line-height: 1.75rem !important;
+}
+
+.text-h2-mobile {
+  font-size: 50px !important;
+}
+
+.text-xl {
+  font-size: 1.25rem !important;
+  line-height: 1.75rem !important;
+}
+
+.text-h2-mobile {
+  font-size: 50px !important;
+}
+
+.text-lg {
+  font-size: 1.125rem !important;
+  line-height: 1.75rem !important;
 }
 
 .font-semibold {
@@ -975,6 +1301,30 @@ video {
   color: rgb(121 121 121 / var(--tw-text-opacity)) !important;
 }
 
+.text-secondary-b {
+  --tw-text-opacity: 1 !important;
+  color: rgb(231 175 65 / var(--tw-text-opacity)) !important;
+}
+
+.text-light-b {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
+
+.text-white {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
+
+.text-light-2 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(167 169 172 / var(--tw-text-opacity)) !important;
+}
+
+.text-current {
+  color: currentColor !important;
+}
+
 .text-white {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
@@ -985,8 +1335,24 @@ video {
   color: rgb(231 175 65 / var(--tw-text-opacity)) !important;
 }
 
-.text-current {
-  color: currentColor !important;
+.text-light-2 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(167 169 172 / var(--tw-text-opacity)) !important;
+}
+
+.text-white {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
+
+.text-secondary-b {
+  --tw-text-opacity: 1 !important;
+  color: rgb(231 175 65 / var(--tw-text-opacity)) !important;
+}
+
+.text-light-2 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(167 169 172 / var(--tw-text-opacity)) !important;
 }
 
 .text-white {
@@ -1073,10 +1439,22 @@ video {
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
   }
+
+  .lg\:text-h1 {
+    font-size: 160px !important;
+  }
+
+  .lg\:text-h2 {
+    font-size: 70px !important;
+  }
 }
 
 @media (min-width: 1280px) {
   .xl\:text-10xl {
     font-size: 10rem !important;
+  }
+
+  .xl\:text-h1 {
+    font-size: 160px !important;
   }
 }
