--- a/superego/assets/styles/scss/03_base/_typography.scss
+++ b/superego/assets/styles/scss/03_base/_typography.scss
@@ -18,7 +18,8 @@
 // Paragraph styling
 p {
   margin-top: 0;
-  max-width: 88ch;
+  // max-width: 88ch;
+  max-width: 50ch;
 
   // Remove empty Gutenberg Paragraphs
   &:empty {
