--- a/superego/assets/styles/scss/04_layout/_header.scss
+++ b/superego/assets/styles/scss/04_layout/_header.scss
@@ -8,33 +8,33 @@
 body header#main-header {
   top: 0;
   left: 0;
-  position: fixed;
   width: 100%;
   transition: var(--se--transition);
   z-index: 99;
 
   .container {
-    //z-index: 9999;
+    @include mq(lg) {
+      padding: 0 1rem;
+    }
   }
 
-  a#site-logo {
-    width: fit-content;
-    height: 100%;
-    display: flex;
-    align-items: center;
+  .btn {
+    height: 4rem;
+    line-height: 4rem;
+    max-width: 270px;
 
-    // &:hover {
-    //   svg {
-    //     path {
-    //       fill: var(--wp--preset--color--accent-b);
-    //     }
-    //   }
-    // }
+    @include mq(lg) {
+      min-width: 240px;
+      margin-left: 1rem;
+    }
+  }
+
+  #menu-btn-mobile {
+    margin-left: auto;
+    margin-right: auto;
   }
 
   nav#main-navigation {
-    //display: flex;
-
     ul#main-nav {
       width: 100%;
       padding: 0;
@@ -66,7 +66,7 @@ body header#main-header {
           line-height: 36px;
 
           &:hover {
-            //background-color: var(--wp--preset--color--light-1);
+            color: var(--wp--preset--color--secondary-b);
           }
         }
 
@@ -116,13 +116,12 @@ body header#main-header {
 
     ul#main-nav-mobile {
       width: 100%;
-      padding: 20% 0 0;
+      padding: 10% 0 0;
       margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      row-gap: 3rem;
       font-weight: var(--wp--custom--font-weight--normal);
 
       > li.menu-item {
@@ -130,6 +129,7 @@ body header#main-header {
         list-style-type: none;
         display: flex;
         transition: var(--se--transition);
+        margin-bottom: 3rem;
 
         a {
           width: 100%;
@@ -138,6 +138,9 @@ body header#main-header {
           transition: var(--se--transition);
           white-space: nowrap;
           -webkit-tap-highlight-color: transparent;
+          font-family: var(--wp--preset--font-family--heading-font);
+          text-transform: uppercase;
+          font-size: 30px;
 
           &:hover {
             color: var(--wp--preset--color--secondary-b);
@@ -160,6 +163,13 @@ body header#main-header {
           }
         }
       }
+    }
+
+    #hand {
+      position: absolute;
+      bottom: 0%;
+      left: 50%;
+      transform: translate(-50%, 0);
     }
   }
 
