--- a/superego/assets/styles/scss/04_layout/_section.scss
+++ b/superego/assets/styles/scss/04_layout/_section.scss
@@ -8,7 +8,7 @@ body section.section {
   padding: var(--se--section-padding) 0;
   transition: padding var(--se--transition);
   position: relative;
-  background-color: inherit;
+  background-color: transparent;
   z-index: 9;
   overflow: hidden;
 
