--- a/superego/assets/styles/scss/05_components/_circle.scss
+++ b/superego/assets/styles/scss/05_components/_circle.scss
@@ -2,12 +2,26 @@
 // This file contains all styles related to the circle component.
 // -----------------------------------------------------------------------------
 
+@use "../01_abstracts/index" as *;
+
 article.se-circle {
   height: 370px;
   width: 370px;
-  max-width: 85vw;
-  max-height: 85vw;
-  margin-inline: auto;
+  max-width: 90vw;
+  max-height: 90vw;
+  margin-left: auto;
+  margin-right: auto;
+  text-transform: uppercase;
+
+  @include mq(lg) {
+    height: 280px;
+    width: 280px;
+  }
+
+  @include mq(xl) {
+    height: 370px;
+    width: 370px;
+  }
 
   p {
     font-family: var(--wp--preset--font-family--heading-font);
@@ -15,5 +29,15 @@ article.se-circle {
     font-size: 40px;
     line-height: 40px;
     font-weight: var(--wp--custom--font-weight--semi-bold);
+
+    @include mq(lg) {
+      font-size: 32px;
+      line-height: 32px;
+    }
+
+    @include mq(xl) {
+      font-size: 40px;
+      line-height: 40px;
+    }
   }
 }
