--- a/superego/assets/styles/scss/06_pages/_home.scss
+++ b/superego/assets/styles/scss/06_pages/_home.scss
@@ -3,3 +3,27 @@
 // -----------------------------------------------------------------------------
 
 @use "../01_abstracts/index" as *;
+
+section#frontpage-banner {
+  #site-title {
+    max-width: 15ch;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+body .page-background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+
+  .image-figure {
+    width: 100%;
+    height: 100%;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
